ulozeni souradnic jako INT

--- a/test.yaml
+++ b/test.yaml
@@ -1,5 +1,13 @@
 frames:
-  1:
-  - {x1: 758.2096774193549, x2: 812.4032258064517, y1: 597.2161290322581, y2: 537.8612903225808}
-path: cesta_k_souboru/video18.avi
+  615:
+  - {x1: 418, x2: 678, y1: 545, y2: 244}
+  620:
+  - {x1: 391, x2: 743, y1: 547, y2: 400}
+  625:
+  - {x1: 412, x2: 773, y1: 563, y2: 415}
+  630:
+  - {x1: 463, x2: 732, y1: 533, y2: 414}
+  635:
+  - {x1: 424, x2: 830, y1: 541, y2: 238}
+path: ../videaSP\IMAG0056.AVI
 team: [Daniel Beran, Hynek Marek]
