zmena v prubehu vytvoreni anotaci

--- a/test.yaml
+++ b/test.yaml
@@ -1,13 +1,17 @@
 frames:
-  615:
-  - {x1: 418, x2: 678, y1: 545, y2: 244}
-  620:
-  - {x1: 391, x2: 743, y1: 547, y2: 400}
-  625:
-  - {x1: 412, x2: 773, y1: 563, y2: 415}
-  630:
-  - {x1: 463, x2: 732, y1: 533, y2: 414}
-  635:
-  - {x1: 424, x2: 830, y1: 541, y2: 238}
-path: ../videaSP\IMAG0056.AVI
+  25:
+  - {x1: 476, x2: 864, y1: 369, y2: 580}
+  26:
+  - {x1: 481, x2: 861, y1: 375, y2: 587}
+  27:
+  - {x1: 433, x2: 806, y1: 361, y2: 583}
+  28:
+  - {x1: 433, x2: 807, y1: 364, y2: 580}
+  29:
+  - {x1: 382, x2: 777, y1: 352, y2: 572}
+  30:
+  - {x1: 324, x2: 725, y1: 349, y2: 575}
+  31:
+  - {x1: 329, x2: 731, y1: 352, y2: 574}
+path: ../videaSP\V__00014_xvid.avi
 team: [Daniel Beran, Hynek Marek]
